# textgraphx

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  DOCUMENTATION.md  EventEnrichmentPhase.py  GraphBasedNLP copy.py  GraphBasedNLP.py  LOGGING_QUICKREF.md  Makefile  PRODUCTION_VALIDATION.md  PipelineOrchestrator.py  README.md  RUNNING_PIPELINE.md  RefinementPhase.py  RunEntityExtractor.py  SRLEnricher_skeleton copy 2.py  SRLEnricher_skeleton copy.py  SRLEnricher_skeleton.py  TemporalPhase.py  TextProcessor.py  TlinksRecognizer.py  UI_TESTING_GUIDE.md  Utils.py  __init__.py  api.py  app.py  authority.py  checkpoint.py  compare_mismatches.py  config.example.ini  config.example.toml  config.ini  config.py  constants.py  count_graph.py  cypher_optimizer.py  (+74 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
.textgraphx/: history.db
backup_code/: GraphBasedNLP copy.py  GraphBasedNLP_copy_stub.py  RunEntityExtractor.py  SRLEnricher_skeleton copy 2.py  SRLEnricher_skeleton copy.py  TextProcessor2.py  TextProcessor3.py  config.cfg  config2.cfg  examples.json  examples.jsonl  test_entity_extractor.py  test_entity_extractor_with_data.py
converted_backups/: TextProcessor2_converted.py  TextProcessor3_converted.py
docs/: COREF_POLICY.md  EVALUATION_ARTIFACT_RETENTION_POLICY.md  EVALUATION_DIAGNOSTICS.md  EVALUATION_IMPROVEMENT_LOG.md  EVALUATION_ROADMAP_M1_TO_M10.md  LOGGING_GUIDE.md  LOGGING_QUICKREF.md  MASTER_ARCHITECTURE_PLAN.md  MEANTIME_GAP_ANALYSIS.md  MILESTONE8_BRIDGE_VALIDATOR.md  NLP_FUNCTION_CATALOG.md  NLP_FUNCTION_DEPENDENCY_GRAPH.md  PACKAGE_REORGANIZATION_PLAN.md  PHASE1_MENTION_LAYER_IMPLEMENTATION.md  PIPELINE_INTEGRATION.md  PRODUCTION_VALIDATION.md  PROJECT_CONTEXT.md  README.md  READY_TO_RUN.md  REAL_PIPELINE_FIX.md  RUNNING_PIPELINE.md  SCHEMA_REDESIGN_FOR_MEANTIME_PARITY.md  SRL_FRAMEWORKS.md  (+11 more)
(+1652 files in other folders)
